# Virtual-Piano

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
shaders/: key.frag  key.vert
src/: CMakeLists.txt
src/app/: CMakeLists.txt  keyboard.cpp  keyboard.h  main.cpp  main_viewport.cpp  main_viewport.h
src/whale/: CMakeLists.txt
src/whale/core/: CMakeLists.txt
src/whale/core/camera/: CMakeLists.txt  basic_camera.cpp  basic_camera.h  controllable_camera.cpp  controllable_camera.h  freecam_controller.cpp  freecam_controller.h
src/whale/core/framework/: CMakeLists.txt  app_event.h  application.cpp  application.h  basic_layer.h  exception.h  input_manager.cpp  input_manager.h
src/whale/core/graphics/: CMakeLists.txt  basic_shader.h  color.h  compute_shader.h  fragment_shader.h  mesh.cpp  mesh.h  shader_manager.cpp  shader_manager.h  texture_manager.cpp  texture_manager.h  uniform_bindings.h  vertex_shader.h
src/whale/core/procedural/: CMakeLists.txt  uv_sphere.cpp  uv_sphere.h
src/whale/core/terrain/: CMakeLists.txt  basic_terrain.cpp  basic_terrain.h  triangle_list.cpp  triangle_list.h
src/whale/platform/: CMakeLists.txt
src/whale/platform/opengl/: CMakeLists.txt  application_opengl.cpp  basic_shader_opengl.cpp  compute_shader_opengl.cpp  fragment_shader_opengl.cpp  shader_program_opengl.cpp  shader_program_opengl.h  vertex_shader_opengl.cpp
